--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<header>
 							<span class="avatar"><img src="https://avatars1.githubusercontent.com/u/543577" style="width:80px" alt="" /></span>
 							<h1>Pachacamac &mdash; call me Marc</h1>
-							<p>Developer / Entrepreneur / Hacker</p>
+							<p>Developer / Tutor / Entrepreneur / Hacker</p>
 						</header>
 						<hr />
 							<ul style="list-style-type: none;">
@@ -33,9 +33,11 @@
 								<li>Technical consulting <small>(10+ years)</small></li>
 								<li>Technical project management <small>(5+ years)</small></li>
 								<li>Agile product management <small>(5+ years)</small></li>
+								<li>Technical tutoring (Ruby/JS/Linux/HTML/CSS/...) <small>(2+ years)</small></li>
 							</ul>
 						<hr />
-						<h2>Contact me</h2>
+						<h2>Contact</h2>
+						<p>Please contact me here if you are interested in tutoring or would like to work with me.</p>
 						<form method="post" action="//formspree.io/pachacamac@inboxalias.com">
 							<div class="field">
 								<input type="text" name="name" id="name" placeholder="Name" />
