--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 								<li>Technical consulting <small>(10+ years)</small></li>
 								<li>Technical project management <small>(5+ years)</small></li>
 								<li>Agile product management <small>(5+ years)</small></li>
-								<li>Technical tutoring (Ruby/JS/Linux/HTML/CSS/...) <small>(2+ years)</small></li>
+								<li>Technical tutoring (Ruby/JS/Linux/HTML/CSS/...) <small>(3+ years)</small></li>
 							</ul>
 						<hr />
 						<h2>Contact</h2>
-						<p>Please contact me here if you are interested in tutoring or would like to work with me.</p>
+						<small>Please contact me here if you are interested in tutoring or would like to work with me.</small>
 						<form method="post" action="//formspree.io/pachacamac@inboxalias.com">
 							<div class="field">
 								<input type="text" name="name" id="name" placeholder="Name" />
